feat: add ingestion mechanism for trace coming from sentinel processing chain